--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Matt Harrison <hi@matt-harrison.com>"]
 
 [dependencies]
 byteorder = "1"
+serde = "1.0.45"
+serde_json = "1.0.17"
+serde_derive = "1.0.45"
