--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "wasmparse"
+name = "wasmparse-core"
 version = "0.1.0"
 authors = ["Matt Harrison <hi@matt-harrison.com>"]
 
 [dependencies]
 byteorder = "1"
-serde = "1.0.45"
-serde_json = "1.0.17"
-serde_derive = "1.0.45"
+serde = "1.0.66"
+serde_json = "1.0.20"
+serde_derive = "1.0.66"
